--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-python@v4
 
       - name: Install dependencies
-        run: pip install pytest pytest-cov
+        run: python3.13 -m pip install pytest pytest-cov
 
       - name: Run tests
         run: pytest tests.py --cov
