--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -1,4 +1,4 @@
-name: Pyright
+name: autopep8
 
 on: [push]
 
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyright
-    - name: Analysing the code with pyright
+        pip install autopep8
+    - name: Analysing the code with autopep8 
       run: |
-        pyright $(git ls-files '*.py')
+        autopep8 $(git ls-files '*.py')
